# reson

./: Cargo.toml  TODO
examples/: demo.rs
src/: blep.rs  fade.rs  lib.rs  midi.rs  synth.rs  tuning.rs  voice.rs
