[package]
name = "reson"
version = "0.1.0"
authors = ["Alexander Rafferty <hello@alexanderrafferty.com>"]
description = "A synthesiser architecture for Rust"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
realfft = "3.3.0"
bumpalo = { version = "3.14.0", features = [] }
slotmap = "1.0.6"
lazy_static = "1.4.0"

[dev-dependencies]
cpal = "0.15.2"
midir = "0.9.1"
ringbuf = "0.3.3"
rand = "0.8.5"
